# ai-anno-2024-vecdb

./: .gitignore  README.md  pyproject.toml
docs/: adapters.md  getting_started.md  pr_explanation.md  youtube_adapter.md
examples/: csv_example.py  text_example.py  youtube_example.py
examples/data/csv/: sample.csv
examples/data/text/: sample.txt  test.txt  test2.txt
src/: __init__.py
src/adapters/: __init__.py  csv_file.py  text_file.py  youtube.py
src/cli/: __init__.py  create_vector_db.py
src/core/: __init__.py  retrieval.py  vector_db.py
