[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_anno_2024_vecdb"
version = "0.1.0"
description = "ベクトルデータベース作成のための標準化されたツールキット"
readme = "README.md"
authors = [
    {name = "Team Mirai", email = "example@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.0.267",
    "langchain-community>=0.0.1",
    "langchain-google-genai>=0.0.1",
    "faiss-cpu>=1.7.4",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pandas>=1.3.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.1",
]
youtube = [
    "youtube-transcript-api>=0.6.0",
]
pdf = [
    "pypdf>=3.0.0",
    "pdf2image>=1.16.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 120
target-version = "py39"
